CS-80 fix welcome card on smaller screens

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   color: #293544;
+  max-width: 1350px;
+  margin: 0 auto;
 }
 a {
   text-decoration: none;
@@ -43,6 +45,7 @@ a {
   color: white;
   height: 24px;
   width: 24px;
+  margin-right: 12px;
 }
 .closeIcon:hover {
   cursor: pointer;
